buyReport 增加涨幅数据